Fix Spacing/Alignment of All Order Total Lines

--- a/theme/templates/sese-bootstrap/sass/sese.sass
+++ b/theme/templates/sese-bootstrap/sass/sese.sass
@@ -174,15 +174,14 @@ div#stateLabel.visibleField
 
 /* Extend the hardcoded CSS classes from the Order Totals module */
 #checkoutPayment fieldset#checkoutOrderTotals, #orderTotals
+  @extend .text-right
   /* Set the column widths and order */
-  #otsubtotal, #otshipping, #ottax, #ottotal, #otgv, #otpriorityhandling
-    @extend .text-right
-    .totalBox
-      @extend .col-xs-2
-      @extend .pull-right
-    .lineTitle
-      @extend .col-xs-10
-      @extend .pull-left
+  .totalBox
+    @extend .col-xs-2
+    @extend .pull-right
+  .lineTitle
+    @extend .col-xs-10
+    @extend .pull-left
   /* Fix row alignment using the linebreaks
   br.clearBoth
     @extend .col-xs-12
